// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list/demo/basic.md correctly 1`] = `
<div
  class="ant-list ant-list-split"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 1
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 2
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 3
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 4
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/grid.md correctly 1`] = `
<div
  class="ant-list ant-list-split ant-list-grid"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-row"
        style="margin-left:-8px;margin-right:-8px"
      >
        <div
          class="ant-col-6"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 1
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-6"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 2
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-6"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 3
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-6"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 4
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-load.md correctly 1`] = `
<div
  class="demo-infinite-container"
>
  <div>
    <div
      class="ant-list ant-list-split"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-list-empty-text"
          >
            <div
              class="ant-empty ant-empty-normal"
            >
              <div
                class="ant-empty-image"
              >
                <img
                  alt="No Data"
                  src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
                />
              </div>
              <p
                class="ant-empty-description"
              >
                No Data
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-virtualized-load.md correctly 1`] = `
<div
  class="ant-list ant-list-split"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    />
  </div>
</div>
`;

exports[`renders ./components/list/demo/loadmore.md correctly 1`] = `
<div
  class="ant-list demo-loadmore-list ant-list-split ant-list-loading"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div>
      <div
        class="ant-spin ant-spin-spinning"
      >
        <span
          class="ant-spin-dot ant-spin-dot-spin"
        >
          <i />
          <i />
          <i />
          <i />
        </span>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height:53px"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/resposive.md correctly 1`] = `
<div
  class="ant-list ant-list-split ant-list-grid"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-row"
        style="margin-left:-8px;margin-right:-8px"
      >
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 1
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 2
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 3
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 4
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 5
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 6
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/simple.md correctly 1`] = `
<div>
  <h3
    style="margin-bottom:16px"
  >
    Default Size
  </h3>
  <div
    class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Racing car sprays burning fuel into crowd.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Japanese princess to wed commoner.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Australian walks 100km after outback crash.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Man charged over missing wedding girl.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Los Angeles battles huge wildfires.
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Small Size
  </h3>
  <div
    class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Racing car sprays burning fuel into crowd.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Japanese princess to wed commoner.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Australian walks 100km after outback crash.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Man charged over missing wedding girl.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Los Angeles battles huge wildfires.
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Large Size
  </h3>
  <div
    class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Racing car sprays burning fuel into crowd.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Japanese princess to wed commoner.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Australian walks 100km after outback crash.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Man charged over missing wedding girl.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Los Angeles battles huge wildfires.
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/vertical.md correctly 1`] = `
<div
  class="ant-list ant-list-vertical ant-list-lg ant-list-split ant-list-something-after-last-item"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-extra-wrap"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 0
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            <div
              class="ant-list-item-content"
            >
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            </div>
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  <i
                    aria-label="icon: star-o"
                    class="anticon anticon-star-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#star-o"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    aria-label="icon: like-o"
                    class="anticon anticon-like-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#like-o"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    aria-label="icon: message"
                    class="anticon anticon-message"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#message"
                      />
                    </svg>
                  </i>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-extra-wrap"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 1
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            <div
              class="ant-list-item-content"
            >
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            </div>
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  <i
                    aria-label="icon: star-o"
                    class="anticon anticon-star-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#star-o"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    aria-label="icon: like-o"
                    class="anticon anticon-like-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#like-o"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    aria-label="icon: message"
                    class="anticon anticon-message"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#message"
                      />
                    </svg>
                  </i>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-extra-wrap"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 2
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            <div
              class="ant-list-item-content"
            >
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            </div>
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  <i
                    aria-label="icon: star-o"
                    class="anticon anticon-star-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#star-o"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    aria-label="icon: like-o"
                    class="anticon anticon-like-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#like-o"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    aria-label="icon: message"
                    class="anticon anticon-message"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#message"
                      />
                    </svg>
                  </i>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div>
      <b>
        ant design
      </b>
       footer part
    </div>
  </div>
  <div
    class="ant-list-pagination"
  >
    <ul
      class="ant-pagination "
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="ant-pagination-disabled ant-pagination-prev"
        title="Previous Page"
      >
        <a
          class="ant-pagination-item-link"
        >
          <i
            aria-label="icon: left"
            class="anticon anticon-left"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#left"
              />
            </svg>
          </i>
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-5"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-6"
        tabindex="0"
        title="6"
      >
        <a>
          6
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-7"
        tabindex="0"
        title="7"
      >
        <a>
          7
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-8"
        tabindex="0"
        title="8"
      >
        <a>
          8
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" ant-pagination-next"
        tabindex="0"
        title="Next Page"
      >
        <a
          class="ant-pagination-item-link"
        >
          <i
            aria-label="icon: right"
            class="anticon anticon-right"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#right"
              />
            </svg>
          </i>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
